# soa_warehouse_service

./: Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml
src/: main.rs  server.rs
src/api/: mod.rs  product_router.rs
src/dto/: mod.rs
src/dto/product/: mod.rs  product_dto.rs  product_error.rs
src/errors/: api_error.rs  app_error.rs  mod.rs
src/model/: mod.rs  product.rs  stock.rs
src/repository/: mod.rs  mongo.rs  product.rs  product_repo.rs  stock_repo.rs
src/service/: product_service.rs
src/utils/: tools.rs
