[package]
name = "warehouse_service"
version = "0.1.0"
authors = ["leonardchinonso leokingluthers@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "^4"
mongodb = "2.6.0"
actix-rt = "2.2"
bson = "2.6.0"
futures = "0.3.4"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"
dotenv = "0.15.0"
chrono = "^0"
rand = "0.8.5"
actix-cors = "0.5.0"
